src/Services/canteenServices/canteenunitServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canteen-unit-service
  labels:
    name: canteen-unit-service
