src/Services/canteenServices/canteenunitServices/k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canteen-unit-service
  labels:
    name: canteen-unit-service
    environment: production
