src/Services/canteenServices/canteenunitServices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canteen-unit-service
  namespace: canteen-unit-service
  labels:
    app: canteen-unit-service
spec:
  type: LoadBalancer
  selector:
    app: canteen-unit-service
  ports:
  - name: http
    port: 80
    targetPort: 5190
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: canteen-unit-service-internal
  namespace: canteen-unit-service
  labels:
    app: canteen-unit-service
spec:
  type: ClusterIP
  selector:
    app: canteen-unit-service
  ports:
  - name: http
    port: 5190
    targetPort: 5190
    protocol: TCP
